applications/openeuler-cn-north4-repo-post-verification/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: repo-post-verification
  name: repo-post-verification
