applications/openeuler-cn-north4-repo-post-verification/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-verification-deployment
  namespace: repo-post-verification
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: post-verification
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: post-verification
    spec:
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/repo-post-verification:1f9a9889deb88fb14dc5a3e955ec259b5f4fb7f1
        imagePullPolicy: Always
        name: post-verification
        resources:
          requests:
            cpu: 2000m
            memory: 4000Mi
          limits:
            cpu: 4000m
            memory: 8000Mi
        volumeMounts:
        - mountPath: /var/log
          name: log-data-volume
        - mountPath: /app-publish/privatekey
          name: ssh-private-key
      volumes:
      - name: log-data-volume
        persistentVolumeClaim:
          claimName: openeuler-data-volume
      - name: ssh-private-key
        secret:
          secretName: post-verification-secrets
