applications/openeuler-cn-north4-repo-post-verification/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/whitelist-source-range: 121.37.228.245,139.159.203.30,139.9.203.63
  name: openeuler-publish-ingress
  namespace: repo-post-verification
spec:
  tls:
  - hosts:
      - publish.openeuler.openatom.cn
    secretName: openeuler-publish-tls
  rules:
    - host: publish.openeuler.openatom.cn
      http:
        paths:
          - backend:
              serviceName: post-verification-service
              servicePort: 8080
            path: /
